# score-predictor

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  setup.py
.github/workflow/: mian.yaml
catboost_info/: catboost_training.json  time_left.tsv
catboost_info/learn/: events.out.tfevents
notebook/: 1 . EDA STUDENT PERFORMANCE .ipynb  2. MODEL TRAINING.ipynb
src/: exception.py  utils.py
src/components/: data_ingestion.py  data_transformation.py
src/pipeline/: predict_pipeline.py
templates/: index.html
